deployments/kubernetes/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  namespace: staging
  annotations: 
    kubernetes.io/ingress.global-static-ip-name: promcat-frontend
    networking.gke.io/managed-certificates: staging_backend
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: backend
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: staging
  annotations: 
    kubernetes.io/ingress.global-static-ip-name: promcat-frontend
    networking.gke.io/managed-certificates: staging_frontend
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 3000
